test-suite/tests/ui/states/redundant_reject.stderr
error: state is already rejected
 --> tests/ui/states/redundant_reject.rs:8:24
  |
8 |     #[stated(reject(A, A))]
  |                        ^
